# ls *.{3,1} | sed -e 's/^/   /' | sed -e 's/$/ \\/'
man_MANS = \
   hdb.1 \
   hdb_cget.3 \
   hdb_close.3 \
   hdb_connect.3 \
   hdb_create_list.3 \
   hdb-cut.1 \
   hdb_cut.3 \
   hdb-del.1 \
   hdb_delete_list.3 \
   hdb_del_val.3 \
   hdb_disconnect.3 \
   hdb-dump.1 \
   hdb_dump_glob.3 \
   hdb_dump_regex.3 \
   hdb-edit.1 \
   hdb_exist.3 \
   hdb-filter.1 \
   hdb-find.1 \
   hdb-get.1 \
   hdb_get_nval.3 \
   hdb_get_root.3 \
   hdb_get_size.3 \
   hdb_get_val.3 \
   hdb-import.1 \
   hdb_key_exist.3 \
   hdb_list_stat.3 \
   hdb_mv.3 \
   hdb-query.1 \
   hdb_scan_sublist.3 \
   hdb_scan_sublist_close.3 \
   hdb_scan_sublist_full.3 \
   hdb-set.1 \
   hdb_set_int.3 \
   hdb_set_root.3 \
   hdb_set_val.3 \
   hdb_stat.3 \
   hdb_sublist_cget.3 \
   hdb_sync.3 \
   hdb_wipe.3 \
   hhdb_close.3 \
   hhdb_copen.3 \
   hhdb_create_list.3 \
   hhdb_delete_list.3 \
   hhdb_det_val.3 \
   hhdb_dump_glob.3 \
   hhdb_dump_regex.3 \
   hhdb_exist.3 \
   hhdb_get_nval.3 \
   hhdb_get_root.3 \
   hhdb_get_size.3 \
   hhdb_get_val.3 \
   hhdb_key_exist.3 \
   hhdb_list_stat.3 \
   hhdb_mv.3 \
   hhdb_scan_sublist.3 \
   hhdb_scan_sublist_full.3 \
   hhdb_set_int.3 \
   hhdb_set_root.3 \
   hhdb_set_val.3 \
   hhdb_stat.3 \
   hhdb_sync.3 \
   hhdb_wipe.3

EXTRA_DIST = $(man_MANS)
